force-app/main/default/objects/Writ__c/Writ__c.object-meta.xml
<CustomObject>
    <description>This object stores writs filed against Assessments.</description>
    <label>Writ</label>
    <nameField>
        <displayFormat>WRT-{0000}</displayFormat>
        <label>Writ Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Writs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>