force-app/main/default/objects/Writ__c/fields/Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attorney Assigned to this Writ.  Is usually the same as the Writ Owner.</description>
    <inlineHelpText>Attorney Assigned to this Writ.  Is usually the same as the Writ Owner.</inlineHelpText>
    <label>Assigned Attorney</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Writs</relationshipLabel>
    <relationshipName>Writs</relationshipName>
    <type>Lookup</type>
</CustomField>