force-app/main/default/objects/Writ__c/fields/Assigned_Attorney_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney_Email_Field__c</fullName>
    <description>Hidden Field to hold the Email of the Assigned Attorney for purposes of email alerts.</description>
    <inlineHelpText>Hidden Field to hold the Email of the Assigned Attorney for purposes of email alerts.</inlineHelpText>
    <label>Assigned Attorney Email Field</label>
    <type>Email</type>
</CustomField>