force-app/main/default/objects/Writ__c/fields/Case_Assigned_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Deputy on Case, set by workflow</description>
    <inlineHelpText>Assigned Deputy on Case, set by workflow</inlineHelpText>
    <label>Case Assigned Deputy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Writs</relationshipName>
    <type>Lookup</type>
</CustomField>