force-app/main/default/objects/Writ__c/fields/CM_Name__c.field-meta.xml
<CustomField>
    <fullName>CM_Name__c</fullName>
    <description>Hidden text field, populated by a workflow rule, to allow users to search Writs by the CM Name in the Writ lookup field search dialog on the Bond object, and in global search.</description>
    <inlineHelpText>Hidden search field, populated by WFR, visible only to Admins.</inlineHelpText>
    <label>CM Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>