force-app/main/default/objects/Writ__c/fields/Date_First_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Payment_Due__c</fullName>
    <description>Payment Plan First Payment Due</description>
    <inlineHelpText>Payment Plan First Payment Due</inlineHelpText>
    <label>Date First Payment Due</label>
    <type>Date</type>
</CustomField>