force-app/main/default/objects/Writ__c/fields/Final_Legal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Legal_Outcome__c</fullName>
    <description>Final Legal Outcome of the Writ</description>
    <inlineHelpText>Final Legal Outcome of the Writ</inlineHelpText>
    <label>Final Legal Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dismissed  </fullName>
            </value>
            <value>
                <fullName>Denied - in whole</fullName>
            </value>
            <value>
                <fullName>Denied - in part</fullName>
            </value>
            <value>
                <fullName>Granted - No Remand</fullName>
            </value>
            <value>
                <fullName>Granted - Remand for New Hearing</fullName>
            </value>
            <value>
                <fullName>Granted - Remand for New Findings</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Withdrawn by Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>