force-app/main/default/objects/Writ__c/fields/Legal_Office__c.field-meta.xml
<CustomField>
    <fullName>Legal_Office__c</fullName>
    <description>Assigned Attorney Office Name</description>
    <formula>Assigned_Attorney__r.Office__r.Name</formula>
    <inlineHelpText>Assigned Attorney Office Name</inlineHelpText>
    <label>Legal Office</label>
    <type>Text</type>
</CustomField>