force-app/main/default/objects/Writ__c/fields/Payment_Plan_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Schedule__c</fullName>
    <description>Free Form text field to enter the Payment Plan Schedule Details</description>
    <inlineHelpText>Free Form text field to enter the Payment Plan Schedule Details</inlineHelpText>
    <label>Payment Plan Schedule</label>
    <type>TextArea</type>
</CustomField>