force-app/main/default/objects/Writ__c/fields/Proper_Service_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Proper_Service_Confirmed__c</fullName>
    <label>Proper Service Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>