force-app/main/default/objects/Writ__c/fields/Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Date__c</fullName>
    <description>Date of the Trial</description>
    <inlineHelpText>Date of the Trial</inlineHelpText>
    <label>Trial Date</label>
    <type>Date</type>
</CustomField>